[gd_scene load_steps=18 format=2]

[ext_resource path="res://Tilemap/FloorTileset.tres" type="TileSet" id=1]
[ext_resource path="res://Tilemap/WallTileset.tres" type="TileSet" id=2]
[ext_resource path="res://Tilemap/AestheticTileset.tres" type="TileSet" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pathfinding/Pathfinding.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Spawner/Spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Shop/Shop.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/Level.gd" type="Script" id=9]
[ext_resource path="res://Assests/tutorial.png" type="Texture" id=10]
[ext_resource path="res://Assests/Sound/Arcade-Adventures_Looping.mp3" type="AudioStream" id=11]
[ext_resource path="res://Assests/Sound/Hero_Dies.mp3" type="AudioStream" id=12]
[ext_resource path="res://Assests/Sound/Bomb_Explosion.mp3" type="AudioStream" id=13]
[ext_resource path="res://Assests/Sound/Used_Item.mp3" type="AudioStream" id=14]
[ext_resource path="res://Assests/Sound/Item_Pickup.mp3" type="AudioStream" id=15]
[ext_resource path="res://Assests/Sound/Find_Money.mp3" type="AudioStream" id=16]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 48, 0 )

[node name="Level06" type="Node"]
script = ExtResource( 9 )

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 64
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 196611, 0, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 0, 0, 262147, 0, 0, 262148, 1, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 1, 0, 262162, 0, 0, 327683, 0, 0, 327684, 1, 0, 327685, 0, 0, 327686, 0, 0, 327687, 2, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 2, 0, 327696, 0, 0, 327697, 1, 0, 327698, 0, 0, 393219, 0, 0, 393220, 1, 0, 393221, 0, 0, 393222, 2, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 2, 0, 393231, 0, 0, 393232, 0, 0, 393233, 1, 0, 393234, 0, 0, 458755, 0, 0, 458756, 1, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 1, 0, 458770, 0, 0, 524291, 0, 0, 524292, 1, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 1, 0, 524306, 0, 0, 589827, 0, 0, 589828, 1, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 1, 0, 589842, 0, 0, 655363, 0, 0, 655364, 1, 0, 655365, 3, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 5, 0, 655374, 2, 0, 655375, 0, 0, 655376, 0, 0, 655377, 1, 0, 655378, 0, 0, 720899, 0, 0, 720900, 1, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 6, 0, 720910, 7, 0, 720911, 0, 0, 720912, 0, 0, 720913, 1, 0, 720914, 0, 0, 786435, 0, 0, 786436, 1, 0, 786437, 2, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 1, 0, 786450, 0, 0, 851971, 0, 0, 851972, 1, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 2, 0, 851983, 0, 0, 851984, 0, 0, 851985, 1, 0, 851986, 0, 0, 917507, 0, 0, 917508, 1, 0, 917509, 0, 0, 917510, 2, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 1, 0, 917522, 0, 0, 983043, 0, 0, 983044, 1, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 2, 0, 983055, 2, 0, 983056, 0, 0, 983057, 1, 0, 983058, 0, 0, 1048579, 0, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0 )

[node name="SpawnerNorth" parent="." instance=ExtResource( 6 )]
position = Vector2( 160, 32 )

[node name="SpawnerWest" parent="." instance=ExtResource( 6 )]
position = Vector2( 64, 128 )
rotation = 1.5708

[node name="Sprite" parent="SpawnerWest/s_1" index="1"]
rotation = -1.5708

[node name="Sprite2" parent="SpawnerWest/s_2" index="1"]
rotation = -1.5708

[node name="Sprite3" parent="SpawnerWest/s_3" index="1"]
rotation = -1.5708

[node name="SpawnerEast" parent="." instance=ExtResource( 6 )]
position = Vector2( 288, 176 )
rotation = -1.5708

[node name="Sprite" parent="SpawnerEast/s_1" index="1"]
rotation = 1.5708

[node name="Sprite2" parent="SpawnerEast/s_2" index="1"]
rotation = 1.5708

[node name="Sprite3" parent="SpawnerEast/s_3" index="1"]
rotation = 1.5708

[node name="SpawnerSouth" parent="." instance=ExtResource( 6 )]
position = Vector2( 160, 272 )

[node name="Walls" type="TileMap" parent="." groups=["obstacles", "walls"]]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_friction = 0.25
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131075, 9, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 10, 0, 196611, 9, 0, 196626, 10, 0, 262147, 9, 0, 262162, 10, 0, 327683, 9, 0, 327698, 10, 0, 393219, 9, 0, 393222, 0, 0, 393223, 6, 0, 393224, 1, 0, 393225, 1, 0, 393226, 6, 0, 393227, 2, 0, 393231, 11, 0, 393234, 10, 0, 458755, 9, 0, 458770, 10, 0, 720899, 9, 0, 720914, 10, 0, 786435, 9, 0, 786450, 10, 0, 851971, 9, 0, 851974, 11, 0, 851979, 0, 0, 851980, 6, 0, 851981, 1, 0, 851982, 1, 0, 851983, 6, 0, 851984, 2, 0, 851986, 10, 0, 917507, 9, 0, 917522, 10, 0, 983043, 9, 0, 983058, 10, 0, 1048579, 9, 0, 1048594, 10, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0 )

[node name="Shop" parent="." instance=ExtResource( 7 )]

[node name="Enemies" type="Node" parent="."]

[node name="Collectibles" type="Node" parent="."]

[node name="Tutorial" type="Sprite" parent="."]
visible = false
position = Vector2( 144, 208 )
texture = ExtResource( 10 )
centered = false

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 176, 176 )

[node name="Aesthetic" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65539, 3, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 6, 0, 327686, 1, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 0, 0, 786443, 1, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 786448, 0, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1114115, 5, 0, 1114130, 4, 0 )

[node name="Pathfinding" parent="." instance=ExtResource( 5 )]

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]

[node name="NextLevelArea" type="Area2D" parent="."]
position = Vector2( 160, 288 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevelArea"]
shape = SubResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Buff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0
pitch_scale = 0.75

[node name="ItemPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -5.0
pitch_scale = 0.5

[node name="Coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -5.0
pitch_scale = 0.75

[connection signal="bought_item" from="Shop" to="Player" method="_on_Shop_bought_item"]
[connection signal="can_start" from="Player" to="." method="start_level"]
[connection signal="coins_changed" from="Player" to="HUD" method="_on_Player_coins_changed"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="item_changed" from="Player" to="HUD" method="_on_Player_item_changed"]
[connection signal="item_used" from="Player" to="." method="_on_Player_item_used"]
[connection signal="lives_changed" from="Player" to="HUD" method="_on_Player_lives_changed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="NextLevelArea" to="." method="_on_NextLevelArea_body_entered"]

[editable path="SpawnerWest"]
[editable path="SpawnerEast"]
